--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Happy Birthday</title>
+    <title>ух ты какой мальчуганчик</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -39,7 +39,7 @@
                         <div id="typed-strings" class="typing">
                             <h2>С днем рождения <i id="nae">Платошкинс</i></h2>
                             <h2>Я тебя люблю</h2>
-                            <h2>You are my favorite ipad kid</h2>
+                            <h2>You are my favorite ipad kid ты самый хороший мальчуганчик</h2>
                         </div>
                         <span id="typed" style="white-space:pre;"></span>
                     </div>
