--- a/Happy Birthday.html
+++ b/Happy Birthday.html
@@ -1,6 +1,6 @@
 <html class="gr__localhost"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Happy Birthday</title>
+    <title>ух ты какой мальчуганчик</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -37,10 +37,10 @@
 
             <div class="col-12 text-center">
                 <div class="type-wrap">
-                    <div id="typed-strings" class="typing" style="display: none;">
-                        <h2>Happy Birthday <i id="nae">fdsafgfdsfsfdsgfg</i></h2>
-                        <h2>Have a wonderful day</h2>
-                        <h2>Filled with joy and happiness.</h2>
+                    <div id="typed-strings" class="typing">
+                        <h2>С днем рождения <i id="nae">Платошкинс</i></h2>
+                        <h2>Я тебя люблю</h2>
+                        <h2>You are my favorite ipad kid ты самый хороший мальчуганчик</h2>
                     </div>
                     <span id="typed" style="white-space:pre;">Happy Birthday <i id="nae">fdsafgfdsfsfdsgf</i></span><span class="typed-cursor">|</span>
                 </div>
