--- a/Happy Birthday.html
+++ b/Happy Birthday.html
@@ -32,17 +32,18 @@
                 <img src="Happy%20Birthday_files/banner.png" alt="">
             </div>
             <div class="col-12  text-center">
-                <div id="name" class="area">fdsafgfdsfsfdsgfg</div>
+                <div id="name" class="area">Платошкинс</div>
             </div>
 
             <div class="col-12 text-center">
                 <div class="type-wrap">
                     <div id="typed-strings" class="typing">
-                        <h2>С днем рождения <i id="nae">Платошкинс</i></h2>
-                        <h2>Я тебя люблю</h2>
-                        <h2>You are my favorite ipad kid ты самый хороший мальчуганчик</h2>
+                        <h2>с днем рождения тебя <i id="nae">солнышко</i></h2>
+                        <h2>я тебя очень сильно люблю зайка</h2>
+                        <h2>ты у меня самый хороший, умный, добрый, классный, ваще супер топ плюс вайб \nчтоб у тебя всегда все всегда получалось (как обычно) люблююю</h2>
+                        <h2></h2>
                     </div>
-                    <span id="typed" style="white-space:pre;">Happy Birthday <i id="nae">fdsafgfdsfsfdsgf</i></span><span class="typed-cursor">|</span>
+                    <span id="typed" style="white-space:pre;">с днем рождения тебя <i id="nae">Платошкинс</i></span><span class="typed-cursor">|</span>
                 </div>
             </div>
 
