--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
                 <div class="col-12 text-center">
                     <div class="type-wrap">
                         <div id="typed-strings" class="typing">
-                            <h2>С днем рождения <i id="nae">Платошкинс</i></h2>
-                            <h2>Я тебя люблю</h2>
-                            <h2>You are my favorite ipad kid ты самый хороший мальчуганчик</h2>
+                            <h2>с днем рождения тебя <i id="nae">солнышко</i></h2>
+                            <h2>я тебя очень сильно люблю зайка</h2>
+                            <h2>ты у меня самый хороший, умный, добрый, классный, ваще супер топ плюс вайб</h2>
+                            <h2>чтоб у тебя всегда все всегда получалось (как обычно) люблююю</h2>
+                            
                         </div>
                         <span id="typed" style="white-space:pre;"></span>
                     </div>
